objects/MDPERSONATOR__MD_propertyResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddress__c</fullName>
        <label>OwnerAddress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerBaseMAK__c</fullName>
        <label>OwnerBaseMAK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerCarrierRoute__c</fullName>
        <label>OwnerCarrierRoute</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerCity__c</fullName>
        <label>OwnerCity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerFormatInfo__c</fullName>
        <label>OwnerFormatInfo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerMAK__c</fullName>
        <label>OwnerMAK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerOccupied__c</fullName>
        <label>OwnerOccupied</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerPrivacyInfo__c</fullName>
        <label>OwnerPrivacyInfo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerState__c</fullName>
        <label>OwnerState</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerZip__c</fullName>
        <label>OwnerZip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParkingCarportArea__c</fullName>
        <label>ParkingCarportArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParkingCarport__c</fullName>
        <label>ParkingCarport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParkingGarageArea__c</fullName>
        <label>ParkingGarageArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParkingGarage__c</fullName>
        <label>ParkingGarage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParkingSpaceCount__c</fullName>
        <label>ParkingSpaceCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressRange__c</fullName>
        <label>Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PatioArea__c</fullName>
        <label>PatioArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Phase__c</fullName>
        <label>Phase</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PlumbingFixturesCount__c</fullName>
        <label>PlumbingFixturesCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoleStructureArea__c</fullName>
        <label>PoleStructureArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoleStructureFlag__c</fullName>
        <label>PoleStructureFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PondFlag__c</fullName>
        <label>PondFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoolArea__c</fullName>
        <label>PoolArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoolHouseArea__c</fullName>
        <label>PoolHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoolHouseFlag__c</fullName>
        <label>PoolHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Pool__c</fullName>
        <label>Pool</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PorchArea__c</fullName>
        <label>PorchArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PorchCode__c</fullName>
        <label>PorchCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostDirectional__c</fullName>
        <label>PostDirectional</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoultryHouseArea__c</fullName>
        <label>PoultryHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoultryHouseFlag__c</fullName>
        <label>PoultryHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PreDirectional__c</fullName>
        <label>PreDirectional</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PreviousAPN__c</fullName>
        <label>PreviousAPN</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PreviousAssessedValue__c</fullName>
        <label>PreviousAssessedValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PrivacyInfo__c</fullName>
        <label>PrivacyInfo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyUseGroup__c</fullName>
        <label>PropertyUseGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyUseMuni__c</fullName>
        <label>PropertyUseMuni</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyUseStandardized__c</fullName>
        <label>PropertyUseStandardized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__QuarterQuarter__c</fullName>
        <label>QuarterQuarter</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Quarter__c</fullName>
        <label>Quarter</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__QuonsetArea__c</fullName>
        <label>QuonsetArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__QuonsetFlag__c</fullName>
        <label>QuonsetFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RVParkingFlag__c</fullName>
        <label>RVParkingFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Range__c</fullName>
        <label>Range</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <label>RecordID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RoofConstruction__c</fullName>
        <label>RoofConstruction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RoofMaterial__c</fullName>
        <label>RoofMaterial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RoomsCount__c</fullName>
        <label>RoomsCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SafeRoomFlag__c</fullName>
        <label>SafeRoomFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SafetyFireSprinklersFlag__c</fullName>
        <label>SafetyFireSprinklersFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SaunaFlag__c</fullName>
        <label>SaunaFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SecondMortgageAmount__c</fullName>
        <label>SecondMortgageAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SecondMortgageLoanTypeCode__c</fullName>
        <label>SecondMortgageLoanTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Section__c</fullName>
        <label>Section</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SecurityAlarmFlag__c</fullName>
        <label>SecurityAlarmFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SewageUsage__c</fullName>
        <label>SewageUsage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ShedArea__c</fullName>
        <label>ShedArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ShedCode__c</fullName>
        <label>ShedCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SiloArea__c</fullName>
        <label>SiloArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SiloFlag__c</fullName>
        <label>SiloFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SittingFlag__c</fullName>
        <label>SittingFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SoundSystemFlag__c</fullName>
        <label>SoundSystemFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SportsCourtFlag__c</fullName>
        <label>SportsCourtFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SprinklersFlag__c</fullName>
        <label>SprinklersFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StableArea__c</fullName>
        <label>StableArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StableFlag__c</fullName>
        <label>StableFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StorageBuildingArea__c</fullName>
        <label>StorageBuildingArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StorageBuildingFlag__c</fullName>
        <label>StorageBuildingFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StoriesCount__c</fullName>
        <label>StoriesCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StormFlag__c</fullName>
        <label>StormFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StormShutterFlag__c</fullName>
        <label>StormShutterFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StreetName__c</fullName>
        <label>StreetName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StructureStyle__c</fullName>
        <label>StructureStyle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StudyFlag__c</fullName>
        <label>StudyFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SuiteName__c</fullName>
        <label>SuiteName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SuiteRange__c</fullName>
        <label>SuiteRange</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SunroomFlag__c</fullName>
        <label>SunroomFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxBilledAmount__c</fullName>
        <label>TaxBilledAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxDelinquentYear__c</fullName>
        <label>TaxDelinquentYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionAdditional__c</fullName>
        <label>TaxExemptionAdditional</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionDisabled__c</fullName>
        <label>TaxExemptionDisabled</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionHomeowner__c</fullName>
        <label>TaxExemptionHomeowner</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionSenior__c</fullName>
        <label>TaxExemptionSenior</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionVeteran__c</fullName>
        <label>TaxExemptionVeteran</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxExemptionWidow__c</fullName>
        <label>TaxExemptionWidow</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxFiscalYear__c</fullName>
        <label>TaxFiscalYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxJurisdiction__c</fullName>
        <label>TaxJurisdiction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TaxRateArea__c</fullName>
        <label>TaxRateArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TennisCourtFlag__c</fullName>
        <label>TennisCourtFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopographyCode__c</fullName>
        <label>TopographyCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Township__c</fullName>
        <label>Township</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TractNumber__c</fullName>
        <label>TractNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TrustFlag__c</fullName>
        <label>TrustFlag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Type2__c</fullName>
        <label>Type2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UnformattedAPN__c</fullName>
        <label>UnformattedAPN</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Unit__c</fullName>
        <label>Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UnitsCount__c</fullName>
        <label>UnitsCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UtilityArea__c</fullName>
        <label>UtilityArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UtilityBuildingArea__c</fullName>
        <label>UtilityBuildingArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UtilityBuildingFlag__c</fullName>
        <label>UtilityBuildingFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UtilityCode__c</fullName>
        <label>UtilityCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuationDate__c</fullName>
        <label>ValuationDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__VestingType__c</fullName>
        <label>VestingType</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ViewDescription__c</fullName>
        <label>ViewDescription</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__WaterFeatureFlag__c</fullName>
        <label>WaterFeatureFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__WaterSource__c</fullName>
        <label>WaterSource</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__WellKnownText__c</fullName>
        <label>WellKnownText</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__WetBarFlag__c</fullName>
        <label>WetBarFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__YearAdded__c</fullName>
        <label>YearAdded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__YearAssessed__c</fullName>
        <label>YearAssessed</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__YearBuiltEffective__c</fullName>
        <label>YearBuiltEffective</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__YearBuilt__c</fullName>
        <label>YearBuilt</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ZonedCodeLocal__c</fullName>
        <label>ZonedCodeLocal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Property V4 Result</label>
    <nameField>
        <label>MD_propertyResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Property V4 Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>